<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.RequestCardFragment">

    <TextView
        android:id="@+id/cards"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:text="@string/cards"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dot1"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:src="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@+id/cards"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/cards" />

    <ImageView
        android:id="@+id/dot2"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:src="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@+id/cards"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toTopOf="@+id/cards" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cards" />

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="@+id/recycler"
        app:layout_constraintTop_toBottomOf="@+id/recycler" />


    <TextView
        android:id="@+id/viewall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:textColor="#C3C8D8"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/today" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today" />

</androidx.constraintlayout.widget.ConstraintLayout>